[gd_scene load_steps=6 format=3 uid="uid://c5udk85vstkfd"]

[ext_resource type="AudioStream" uid="uid://yxrg0siubl8s" path="res://sfx/oof.ogg" id="1_28ke0"]
[ext_resource type="Script" path="res://Car.gd" id="1_c6he2"]
[ext_resource type="Texture2D" uid="uid://dc8bid0x113bv" path="res://obstacles/car1.png" id="2_1npi4"]

[sub_resource type="QuadMesh" id="QuadMesh_im3p1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiqw6"]
size = Vector2(1, 2)

[node name="ObstacleCar" type="Node2D"]

[node name="OofSoundClip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_28ke0")

[node name="Car" type="Area2D" parent="."]
scale = Vector2(20, 20)
script = ExtResource("1_c6he2")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Car"]
scale = Vector2(1, 2)
mesh = SubResource("QuadMesh_im3p1")
texture = ExtResource("2_1npi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car"]
shape = SubResource("RectangleShape2D_kiqw6")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Car" to="Car" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="Car" method="_on_timer_timeout"]
